Components done and basic implementation with pocketbase

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,261 +1,9 @@
 <div id="fh5co-wrapper">
   <div id="fh5co-page">
-
-    <header id="fh5co-header-section" class="sticky-banner">
-      <div class="container">
-        <div class="nav-header">
-          <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-          <h1 id="fh5co-logo"><a href="index.html"><i class="icon-home"></i>Val<span
-                style="font-size: 24px !important;">imoveis</span></a>
-          </h1>
-          <!-- START #fh5co-menu-wrap -->
-          <nav id="fh5co-menu-wrap" role="navigation">
-            <ul class="sf-menu" id="fh5co-primary-menu">
-              <li class="active"><a href="index.html">Início</a></li>
-              <li>
-                <a href="properties.html" class="fh5co-sub-ddown">Imóveis</a>
-                <ul class="fh5co-sub-menu">
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                  <li><a href="#"></a></li>
-                </ul>
-              </li>
-              <li><a href="agent.html">Sobre</a></li>
-              <li><a href="contact.html">Contato</a></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
-
-    <!-- fh5co-blog-section -->
-    <div id="fh5co-contact" class="fh5co-contact">
-      <div class="half-contact">
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12 col-md-offset-0 text-left heading-section animate-box">
-              <h3>Olá,<br> Sou a Val</h3>
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-                perspiciatis accusamus asperiores sint consequuntur debitis.]
-              </p>
-            </div>
-          </div>
-          <!-- <div class="col-md-12">
-							<div class="form-group">
-								<input type="submit" value="Send Message" class="btn btn-primary">
-							</div>
-						</div> -->
-        </div>
-
-      </div>
-      <div class="half-contact">
-        <div class="container-fluid">
-          <div class="row">
-            <img class="img-responsive" src="images/user-1.jpg" alt="Val Corretora">
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div id="fh5co-properties" class="fh5co-section-gray">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-            <h3>Imóveis</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-              perspiciatis accusamus asperiores sint consequuntur debitis.</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 animate-box">
-            <div class="property">
-              <a href="#" class="fh5co-property" style="background-image: url(images/property-1.jpg);">
-                <span class="status">Venda</span>
-                <ul class="list-details">
-                  <li>2000 m2
-                  <li>
-                  <li>5 Dormitórios:</li>
-                  <li>4 Banheiros:</li>
-                  <li>1 Garagem:</li>
-                </ul>
-              </a>
-              <div class="property-details">
-                <h3>Apartamento - Mooca</h3>
-                <span class="price">R$ 300.000,00</span>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis
-                  maiores.</p>
-                <span class="address">
-                  <i class="icon-map"></i>
-                  Thomas Street, St. Louis, MO 8990,
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <app-header></app-header>
+    <app-home></app-home>
+    <app-propertie></app-propertie>
+    <app-about></app-about>
+    <app-contact></app-contact>
+    <app-footer></app-footer>
   </div>
-
-  <div id="fh5co-features">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-          <h3>Sobre</h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-            there live the blind texts.</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 animate-box">
-
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-map"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Move House</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-md-4 animate-box">
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-browser"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Mortgage</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 animate-box">
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-wallet"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Make Money</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 animate-box">
-
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-piechart"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Business Home</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-md-4 animate-box">
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-genius"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Marketing</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-
-        </div>
-        <div class="col-md-4 animate-box">
-          <div class="feature-left">
-            <span class="icon">
-              <i class="icon-chat"></i>
-            </span>
-            <div class="feature-copy">
-              <h3>Explorer</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="fh5co-contact" class="fh5co-section-gray">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-          <h3>Contato</h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-            there live the blind texts.</p>
-        </div>
-      </div>
-      <form action="#">
-        <div class="row animate-box">
-          <div class="col-md-6">
-            <h3 class="section-title">Our Address</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-              there live the blind texts.</p>
-            <ul class="contact-info">
-              <li><i class="icon-location-pin"></i>198 West 21th Street, Suite 721 New York NY 10016
-              </li>
-              <li><i class="icon-phone2"></i>+ 1235 2355 98</li>
-              <li><i class="icon-mail"></i><a href="#">info@yoursite.com</a></li>
-              <li><i class="icon-whatsapp"></i><a href="#">www.yoursite.com</a></li>
-            </ul>
-          </div>
-          <div class="col-md-6">
-            <div class="row">
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Name">
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Email">
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <textarea name="" class="form-control" id="" cols="30" rows="7" placeholder="Message"></textarea>
-                </div>
-              </div>
-              <div class="col-md-12">
-                <div class="form-group">
-                  <input type="submit" value="Send Message" class="btn btn-primary">
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <footer>
-    <div id="footer">
-      <div class="row">
-        <div class="col-md-12">
-          <p style="margin: 0 !important;">
-            <a href="mailto:test@gmail.com">aaa</a> | © <a href="email:">Val Imóvies</a> - Todos os
-            direitos resolvidos.
-          </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-
-</div>
