Adding contact on footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,7 +3,9 @@
     <div class="row">
       <div class="col-md-12">
         <p style="margin: 0 !important;">
-          <a href="mailto:test@gmail.com">aaa</a> | © <a href="email:">Val Imóvies</a> - Todos os
+          <a class="mx-2" href="mailto:val.corretoraimoveis@gmail.com">
+            val.corretoraimoveis&#64;gmail.com
+          </a> | © Val Imóvies - Todos os
           direitos resolvidos.
         </p>
       </div>
