--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,24 +1,23 @@
-<div id="fh5co-contact" class="fh5co-contact">
-    <div class="half-contact">
-        <div class="container-fluid">
-            <div class="row">
+<div id="fh5co-contact">
+    <div class="container">
+        <div class="row">
+            <div class="col">
                 <div class="col-md-12 col-md-offset-0 text-left heading-section animate-box">
                     <h3>Olá,<br> Sou a Val</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-                        perspiciatis accusamus asperiores sint consequuntur debitis.]
+                        Corretora de imóveis desde 2010, atuante em documentação imobiliária
+                        e análise para aprovação de financiamento bancário.
+                        Imóveis na planta e pronto para morar, no plano MINHA CASA MINHA VIDA
                     </p>
+                    <p>Atuo com construtoras renomadas no mercado imobiliário. </p>
+                    
+                    <p>Creci 120.862</p>
                 </div>
             </div>
-        </div>
-
-    </div>
-    <div class="half-contact">
-        <div class="container-fluid">
-            <div class="row">
-                <img class="img-responsive" alt="Val Corretora" src="../assets/images/hero.jpg">
+            <div class="col-sm-5 d-flex jusify-content-center align-items-center">
+                <img class="img-responsive" height="80%" width="80%" alt="Val Corretora"
+                    src="../assets/images/hero.jpg">
             </div>
         </div>
-
     </div>
 </div>
