--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,8 +3,10 @@
         <div class="row justify-content-center">
             <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
                 <h3>Contato</h3>
-                <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-                    there live the blind texts.</p>
+                <p>Obrigada por chegar até aqui.
+                    Caso queira mais informações sobre os imoveis apresentados não hesite ementrar em contato.
+                    Terei o maior prazer em orientá-lo(a) em sua jornada para a compra perfeita!
+                </p>
             </div>
         </div>
         <div class="container text-center">
