--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,25 +1,26 @@
 <div id="fh5co-features">
-    <div class="container">
-      <div class="row justify-content-center">
-        <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-          <h3>Sobre</h3>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-            there liFve the blind texts.</p>
-        </div>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
+        <h3>Construtoras</h3>
+        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+          there liFve the blind texts.
+        </p>
       </div>
-      <div class="row">
-        <div class="col-md-4 animate-box">
-          <div class="feature-left d-flex">
-            <span class="m-2">
-              <img src="../assets/images/logo-brasil-brokers.png" width="60px" height="60px" alt="">
-            </span>
-            <div class="feature-copy">
-              <h3>Brasil Brokers</h3>
-              <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
-              <p><a href="#">Learn More</a></p>
-            </div>
+    </div>
+    <div class="row">
+      <div class="col-md-4 animate-box">
+        <div class="feature-left d-flex">
+          <span class="m-2">
+            <img src="../assets/images/logo-brasil-brokers.png" width="60px" height="60px" alt="">
+          </span>
+          <div class="feature-copy">
+            <h3>Brasil Brokers</h3>
+            <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+            <p><a href="#">Learn More</a></p>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
