id name and p content

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="fh5co-contact">
+<div id="home">
     <div class="container">
         <div class="row">
             <div class="col">
@@ -9,14 +9,14 @@
                         e análise para aprovação de financiamento bancário.
                         Imóveis na planta e pronto para morar, no plano MINHA CASA MINHA VIDA
                     </p>
-                    <p>Atuo com construtoras renomadas no mercado imobiliário. </p>
-                    
-                    <p>Creci 120.862</p>
+                    <p>Construtoras que atuo:<a class="mx-2" href="#construtoras">Veja mais</a>
+                    </p>
+
+                    <p>CRECI: 120.862</p>
                 </div>
             </div>
             <div class="col-sm-5 d-flex jusify-content-center align-items-center">
-                <img class="img-responsive" height="80%" width="80%" alt="Val Corretora"
-                    src="../assets/images/hero.jpg">
+                <img class="img-responsive" width="100%" alt="Val Corretora" src="../assets/images/profile.JPG">
             </div>
         </div>
     </div>
