--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,11 +1,9 @@
-<div id="fh5co-features">
+<div id="construtoras">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
         <h3>Construtoras</h3>
-        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
-          there liFve the blind texts.
-        </p>
+        <p>Aqui são algumas das construtoras renomadas no mercado imobiliário.</p>
       </div>
     </div>
     <div class="row">
