--- a/src/app/components/propertie/propertie.component.html
+++ b/src/app/components/propertie/propertie.component.html
@@ -1,4 +1,4 @@
-<div id="fh5co-properties" class="fh5co-section-gray">
+<div id="imoveis" class="fh5co-section-gray">
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
