--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,8 +2,11 @@
   <div class="container">
     <div class="row justify-content-center">
       <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
-        <h3>Construtoras</h3>
-        <p>Aqui são algumas das construtoras renomadas no mercado imobiliário.</p>
+        <h3 class="lg-font-size">Construtoras</h3>
+        <p class="md-font-size">
+          Aqui estão algumas das construtoras renomadas no
+          mercado imobiliário com as quais tenho experiência.
+        </p>
       </div>
     </div>
     <div class="row">
@@ -15,7 +18,7 @@
               alt="{{experience.logo_empresa}}" width="60px" height="60px" />
           </span>
           <div class="feature-copy">
-            <h3>{{experience.titulo}}</h3>
+            <h3 class="h3-about">{{experience.titulo}}</h3>
             <p>{{experience.desc}}</p>
           </div>
         </div>
