--- a/src/app/components/propertie/propertie.component.html
+++ b/src/app/components/propertie/propertie.component.html
@@ -3,8 +3,9 @@
     <div class="row justify-content-center">
       <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
         <h3 class="lg-font-size">Imóveis</h3>
-        <p class="md-font-size">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit est facilis maiores,
-          perspiciatis accusamus asperiores sint consequuntur debitis.</p>
+        <p class="md-font-size">Apresento minha atual carteira de imóveis, refletindo meu envolvimento contínuo no
+          mercado imobiliário. Essa seleção de propriedades abrange uma variedade de opções, cada uma com suas
+          características únicas e potencialidades.</p>
       </div>
     </div>
     <div class="row" *ngFor="let propertiesItem of properties">
