--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -9,7 +9,11 @@
                         e análise para aprovação de financiamento bancário.
                         Imóveis na planta e pronto para morar, no plano MINHA CASA MINHA VIDA.
                     </p>
-                    <p>CRECI: 120.862</p>
+                    <p>
+                        CRECI: 120.862
+                        <br>
+                        CNAI: 37741
+                    </p>
 
                     <button type="button" (click)="scroll('construtoras')" class="btn btn-primary mb-4">
                         Minha experiência em construtoras
