--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1275,7 +1275,7 @@ div.cs-select {
 		h3 {
 			font-size: 18px;
 			color: lighten($brand-black, 10%);
-			margin-bottom: 10px;
+			// margin-bottom: 10px;
 		}
 
 		p {
