--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,8 +4,8 @@
       <div class="col-md-8 col-md-offset-2 text-center heading-section animate-box">
         <h3 class="lg-font-size">Construtoras</h3>
         <p class="md-font-size">
-          Apresento algumas das construtoras de renome que fazem parte do meu histórico de experiência no mercado
-          imobiliário.
+          Apresento algumas das construtoras de renome que fazem parte do meu histórico de mais de uma década de
+          experiência no mercado imobiliário.
         </p>
       </div>
     </div>
@@ -17,7 +17,7 @@
               src="http://127.0.0.1:8090/api/files/{{experienceItem.collectionId}}/{{experienceItem.id}}/{{experienceItem.logo_empresa}}"
               alt="{{experienceItem.logo_empresa}}" width="{{experienceItem.width}}"
               height="{{experienceItem.height}}" />
-          </span> 
+          </span>
         </div>
       </div>
     </div>
