--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 <div id="fh5co-wrapper">
   <div id="fh5co-page">
-    <app-header></app-header>
-    <app-home></app-home>
-    <app-propertie></app-propertie>
-    <app-about></app-about>
-    <app-contact></app-contact>
-    <app-footer></app-footer>
+    <router-outlet></router-outlet>
   </div>
+</div>
