Updating baseUrl to POCKETBASE_URL

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,7 +14,7 @@
         <div class="feature-left d-flex">
           <span class="m-2">
             <img
-              src="http://127.0.0.1:8090/api/files/{{experienceItem.collectionId}}/{{experienceItem.id}}/{{experienceItem.logo_empresa}}"
+              src="https://val-imoveis.pockethost.io/api/files/{{experienceItem.collectionId}}/{{experienceItem.id}}/{{experienceItem.logo_empresa}}"
               alt="{{experienceItem.logo_empresa}}" width="{{experienceItem.width}}"
               height="{{experienceItem.height}}" />
           </span>
