properties valor and nome styles

--- a/src/app/components/properties/properties.component.html
+++ b/src/app/components/properties/properties.component.html
@@ -23,8 +23,8 @@
             </ul>
           </a>
           <div class="property-details">
-            <h3>{{propertiesItem.nome}}</h3>
-            <span class="price">R$ {{
+            <h3 class="mg-font-size">{{propertiesItem.nome}}</h3>
+            <span class="price sm-font-size">R$ {{
               propertiesItem.valor
               .toString()
               .replace('.',',')
