--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div id="fh5co-wrapper">
   <div id="fh5co-page">
+    <app-header></app-header>
     <router-outlet></router-outlet>
   </div>
 </div>
