--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1028,9 +1028,9 @@ div.cs-select {
 
 	&:hover,
 	&:focus {
-		-webkit-box-shadow: inset 0px -120px 115px -23px rgba(0, 0, 0, 0.85);
-		-moz-box-shadow: inset 0px -120px 115px -23px rgba(0, 0, 0, 0.85);
-		box-shadow: inset 0px -120px 115px -23px rgba(0, 0, 0, 0.85);
+		-webkit-box-shadow: inset 0px -120px 115px -23px rgba(#252525, 0.85);
+		-moz-box-shadow: inset 0px -120px 115px -23px rgba(#252525, 0.85);
+		box-shadow: inset 0px -120px 115px -23px rgba(#252525, 0.85);
 	}
 
 	.status {
@@ -1129,7 +1129,7 @@ div.cs-select {
 		right: 0;
 		margin: 0;
 		padding: 10px;
-		background: rgba($brand-black, .7);
+		background: rgba(#2e2e2e, .8);
 
 		li {
 			font-size: 12px;
