--- a/src/app/components/properties/properties.component.html
+++ b/src/app/components/properties/properties.component.html
@@ -13,33 +13,33 @@
         <div class="property">
           <a class="fh5co-property" [routerLink]="['imovel-detalhes', propertiesItem.id]"
             style="background-image: url(https://val-imoveis.pockethost.io/api/files/{{propertiesItem.collectionId}}/{{propertiesItem.id}}/{{propertiesItem.foto_principal}});">
-            <span class="status">{{propertiesItem.status}}</span>
+            <span class="status">{{propertiesItem.status_imovel}}</span>
             <ul class="list-details">
-              <li>{{propertiesItem.metragem}} m2
+              <li>{{propertiesItem.numero_metragem}}m2
               <li>
-              <li>{{propertiesItem.dormitorio}} Dormitórios</li>
-              <li>{{propertiesItem.banheiro}} Banheiros</li>
-              <li>{{propertiesItem.vaga}} Vaga</li>
+              <li>{{propertiesItem.qtd_dormitorio}} Dormitórios</li>
+              <li>{{propertiesItem.qtd_banheiro}} Banheiros</li>
+              <li>{{propertiesItem.qtd_vagas}} Vaga</li>
             </ul>
           </a>
           <div class="property-details">
-            <h3 class="mg-font-size">{{propertiesItem.nome}}</h3>
+            <h3 class="mg-font-size">{{propertiesItem.imovel}} - {{propertiesItem.endereco_bairro}}</h3>
             <span class="price sm-font-size">R$ {{
-              propertiesItem.valor
+              (propertiesItem.status_imovel == 'Aluguel' ? propertiesItem.valor_aluguel : propertiesItem.valor_venda_imovel)
               .toString()
               .replace('.',',')
               |
               mask: 'separator.2': {thousandSeparator: '.'}
-              }}<span *ngIf="!propertiesItem.valor.toString().includes('.')">,00</span></span>
-            <p>{{propertiesItem.desc_anuncio}}</p>
+              }}<span *ngIf="!propertiesItem.valor_venda_imovel.toString().includes('.')">,00</span></span>
+            <p>{{propertiesItem.desc_imovel_simple}}</p>
             <span class="address">
               <a target="blank_" [href]="'https://www.google.com/search?q=' 
                 + propertiesItem.endereco + ' ' 
-                + propertiesItem.numero + ' ' 
-                + propertiesItem.bairro + ' ' 
-                + propertiesItem.cidade + ' ' 
-                + propertiesItem.estado + ' ' 
-                + propertiesItem.cep">
+                + propertiesItem.endereco_numero + ' ' 
+                + propertiesItem.endereco_bairro + ' ' 
+                + propertiesItem.endereco_cidade + ' ' 
+                + propertiesItem.endereco_estado + ' ' 
+                + propertiesItem.endereco_cep">
                 <svg viewBox="0 0 24 24" width="20" height="20" xmlns="http://www.w3.org/2000/svg" fill="#000000"
                   style="--darkreader-inline-fill: #000000;" data-darkreader-inline-fill="">
                   <path
@@ -47,8 +47,8 @@
                   </path>
                   <path fill="none" d="M0 0h24v24H0z"></path>
                 </svg>
-                {{propertiesItem.endereco}} {{propertiesItem.numero}}, {{propertiesItem.bairro}},
-                {{propertiesItem.estado}} - {{propertiesItem.cep | mask: '00000-000'}}
+                {{propertiesItem.endereco}} {{propertiesItem.endereco_numero}}, {{propertiesItem.endereco_bairro}},
+                {{propertiesItem.endereco_estado}} - {{propertiesItem.endereco_cep | mask: '00000-000'}}
               </a>
             </span>
           </div>
