Simple Style Changes

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,7 @@ $grid-gutter-width: 40px;
 $border-radius-base: 4px;
 $padding-base-vertical: 14px;
 
-$brand-primary: #238662;
+$brand-primary: #2E614C;
 $brand-secondary: #EE7738;
 
 $brand-white: #fff;
@@ -22,7 +22,7 @@ $form-group-margin-bottom: 30px;
 
 
 .brand-primary {
-	fill: #238662;
+	fill: #2E614C;
 }
 
 .cursor-pointer {
